fix header text on tablets

--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,7 @@ li span {
     .header-text {
         width: 75%;
         position: absolute;
-        top: 50%;
+        top: 55%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
